# essay-prompter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: botctl.sh
src/essay_bot/: __init__.py  __main__.py  assignment_engine.py  bot.py  config.py  database.py  prompts.py  security.py
tests/: test_assignment_engine.py  test_bot_features.py  test_main_entrypoint.py  test_prompts.py  test_security.py
