[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "essay-prompter-bot"
version = "0.1.0"
description = "Telegram bot that delivers weekly essay prompts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot[job-queue]>=21.0,<22.0",
  "SQLAlchemy>=2.0,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "cachetools>=5.3,<6.0",
  "tzdata>=2024.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.4.0,<1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
